dfir_rs/tests/compile-fail-stable/surface_singleton_undefined.stderr
error: Cannot find referenced name `unknown`; name was never assigned.
 --> tests/compile-fail-stable/surface_singleton_undefined.rs:5:41
  |
5 |             -> filter(|value| value <= #unknown.as_reveal_ref())
  |                                         ^^^^^^^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
 --> tests/compile-fail-stable/surface_singleton_undefined.rs:8:8
  |
8 |     df.run_available_sync();
  |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
